# lesion-network-mapping-videos

./: .gitattributes  .gitignore  AUTHORING.md  Makefile  README.md  build_video.py  exam_common.py  kokoro_say.py  lnm_engine.py  pyproject.toml  render.sh  requirements.txt
chapters/c0101_map_operator/: narration.py  scenes.py
chapters/c0102_real_pipeline/: narration.py  scenes.py
chapters/c0103_charge_formalized/: narration.py  scenes.py
chapters/c0104_camera_vs_court/: narration.py  scenes.py
chapters/c0201_spectral_decomposition/: narration.py  scenes.py
chapters/c0202_backbone_term/: narration.py  scenes.py
chapters/c0203_alignment_bound/: narration.py  scenes.py
chapters/c0204_three_voxel_example/: narration.py  scenes.py
chapters/c0205_convergence_geometry/: narration.py  scenes.py
chapters/c0301_lnm_to_degree/: narration.py  scenes.py
chapters/c0302_slnm_to_pc1/: narration.py  scenes.py
chapters/c0303_empirical_demolition/: narration.py  scenes.py
chapters/c0304_convergence_trap_stated/: narration.py  scenes.py
chapters/c0401_diagnostic_vocabulary/: narration.py  scenes.py
chapters/c0402_location_null/: narration.py  scenes.py
chapters/c0403_specificity_collapse/: narration.py  scenes.py
chapters/c0404_steelman_second_reason/: narration.py  scenes.py
chapters/c0501_symptom_label_null/: narration.py  scenes.py
chapters/c0502_permutation_exactness/: narration.py  scenes.py
docs/: SERIES_PLAN.md  overview_plan.md
overview/: narration.py  scenes.py
scripts/: bootstrap.sh
tests/: test_sync.py
workflows/: author_chapters.mjs
(+119 files in other folders)
